# SMW

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PROMPT.md  PRD.md  README.md  RULES.md  pyproject.toml  requirements.txt  test_reader_Excel.ipynb
.streamlit/: config.toml
domain/: __init__.py  measurement.py  point.py
exporters/: __init__.py  csv_exporter.py
gui/: __init__.py  app.py
providers/: __init__.py  base.py  excel.py  exceptions.py  parsers.py
tests/: __init__.py  test_csv_exporter.py  test_domain.py  test_excel_validation.py  test_providers.py  test_visualization.py
visualization/: __init__.py  plots.py
