[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smw"
version = "0.1.0"
description = "System wizualizacji parametrów jakości wód"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
include = ["domain*", "providers*", "visualization*", "gui*"]
